Fix styling on mobile version

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
 
 /* Custom styles */
 
@@ -10,7 +10,7 @@
 
 body {
   color: #272a31;
-  font-family: "Lato", sans-serif;
+  font-family: Lato, sans-serif;
   font-weight: 400;
   background: #fff;
   line-height: 1.5rem;
@@ -71,6 +71,11 @@ li {
   width: 30%;
 }
 
+.footer small {
+  text-align: center;
+  font-size: 0.8rem;
+}
+
 /*
   ========================================
   Home
@@ -80,7 +85,7 @@ li {
 /* Section 1 */
 
 .section1 {
-  background: url(../images/home/background.jpg) no-repeat;
+  background: url("../images/home/background.jpg") no-repeat;
   background-size: 100% 100%;
   height: 100%;
   padding: 20vh 5%;
@@ -123,7 +128,7 @@ li {
 /* Main Program */
 
 .main-program {
-  background: url(../images/home/black-background.jpeg) no-repeat;
+  background: url("../images/home/black-background.jpeg") no-repeat;
   background-size: 100% 100%;
   color: #d3d3d3;
 }
@@ -137,13 +142,13 @@ li {
 
 .grid-item {
   display: grid;
-  grid-template-columns: 5% 23% 66%;
+  grid-template-columns: 8% 23% 66%;
   grid-template-rows: 1fr;
-  grid-column-gap: 10px;
+  grid-column-gap: 0.6rem;
   align-items: center;
   border: none;
-  background: rgba(116, 116, 116, 0.3);
-  padding: 20px;
+  background: rgb(116 116 116 / 30%);
+  padding: 0.6rem;
 }
 
 .grid-item:hover {
@@ -152,15 +157,19 @@ li {
 
 .grid-item h4 {
   color: #ec5242;
-  font-size: 20px;
+  font-size: 0.9rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .icon {
-  width: 2rem !important;
-  height: 3rem !important;
+  width: 30px;
+  margin: auto;
+}
+
+.grid-item p {
+  font-size: 1rem;
 }
 
 .program,
@@ -320,12 +329,12 @@ h3 {
 }
 
 .afest-events {
-  background: linear-gradient(rgba(202, 0, 0, 0.705), rgba(219, 0, 0, 0.89)), url(../images/about/a-fest.png);
+  background: linear-gradient(rgb(202 0 0 / 70.5%), rgb(219 0 0 / 89%)), url("../images/about/a-fest.png");
   margin: 35px auto 10px;
 }
 
 .univ-events {
-  background: linear-gradient(rgba(202, 0, 0, 0.705), rgba(219, 0, 0, 0.89)), url(../images/about/mindvalley-university.jpg);
+  background: linear-gradient(rgb(202 0 0 / 70.5%), rgb(219 0 0 / 89%)), url("../images/about/mindvalley-university.jpg");
 }
 
 .year {
@@ -401,7 +410,7 @@ h3 {
   .events {
     display: flex;
     gap: 20px;
-    margin: 45px auto 45px;
+    margin: 45px auto;
   }
 
   .afest-events {
@@ -429,7 +438,7 @@ h3 {
 
   .nav-mobile,
   .close,
-  .homeA {
+  .home-a {
     display: none;
   }
 
@@ -532,11 +541,11 @@ h3 {
 
   .grid-item {
     border: none;
-    background: rgba(116, 116, 116, 0.3);
+    background: rgb(116 116 116 / 30%);
     font-size: 1rem;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 20% 10% 60%;
+    grid-template-rows: 20% 10% 61%;
     align-items: center;
     gap: 5%;
     line-height: 1.1;
@@ -551,12 +560,12 @@ h3 {
   }
 
   .icon {
-    width: 3rem !important;
+    height: 2rem !important;
     margin: auto;
   }
 
   .grid-item p {
-    margin-top: 1rem;
+    margin: 1rem 0;
     align-self: flex-start;
   }
 
